assets/css/style.scss
/* ... */
.codexUpper {
  display: flex;
  justify-content: space-around;
  margin: 0 auto;
}
@media screen and (max-width: 1600px) {
  .codexUpper {
    flex-direction: column;
    margin:0;
  }
}
@media (max-width: 991px) {
  .codexUpper {
    flex-direction: column-reverse;
  }
}
@media screen and (max-width: 991px) {
  .codexLower {
    display: none;
  }
}

.codexLowerClear {
  padding: 30px;
}
.codexLowerClear p {
  display: none;
}

.codexLowerNothing {
  display: none;
}

.codexTOC {
  margin: 20px;
  border-right: 1px solid rgba(255,255,255,0.2);
  text-align: right;
  white-space: nowrap;
  min-width: 300px;
}
@media (max-width: 991px) {
  .codexTOC {
    text-align: center;
    border-right: none;
    min-width: 0px;
  }
}
.codexTOC ul {
  margin: 10px;
  margin-right: 30px;
  list-style: none;
  padding-left: 10px;
  padding-top: 20px;
}
@media (max-width: 991px) {
  .codexTOC ul {
    padding-top: 0px;
  }
}
.codexTOCLink {
  border-right: 2px solid;
  padding-right: 30px;
  text-transform: uppercase;
  transition: 0.1s ease-in-out;
}
@media (max-width: 991px) {
  .codexTOCLink {
    border-right: none;
    padding-right: 0px;
  }
}
.codexTOCLink:hover {
  color: white !important;
}
.codexTextBlock {
  display: flex;
  flex-grow: 0;
  padding-top: 30px;
  padding-bottom: 30px;

  /* background-image: url('../images/litesheen_codex.png');
  background-repeat: no-repeat;
  background-position: right top; */

  margin-right: 40px;
}
@media (max-width: 991px) {
  .codexTextBlock {
    flex-direction: column-reverse;
    margin-right: 0;
    padding-top: 0px;
    padding-bottom: 0px;
  }
}

.codexTextContentNoTOC {
  
}
.codexTextBlockNoTOC {
  flex: 1 !important;
  margin-left: 60px;
  margin-right: 60px;
}
.codexImageBlockNoTOC {
  margin-right: 60px !important;
}
@media screen and (max-width: 1600px) {
  .codexTextContentNoTOC {
    margin: 0 auto !important;

    max-width: 1000px !important;

    padding-left: 50px !important;
    padding-right: 50px !important;

    padding-top: 20px;
    padding-bottom: 20px;

    border-left: 1px solid rgba(255,255,255,0.2);
    border-right: 1px solid rgba(255,255,255,0.2);
  }
}
@media screen and (max-width: 1600px) {
  .codexTextBlockNoTOC {
    margin-right: 0px !important;
    margin-left: 0px !important;
    flex: inherit !important;
  }
  .codexImageBlockNoTOC {
    margin-right: 0px !important;
  }
}
@media (max-width: 991px) {
  .codexTextContentNoTOC {
    padding-left: 20px !important;
    padding-right: 20px !important;
    border-left: none !important;
    border-right: none !important;
    margin-top: -3px !important;
  }
}

.codexTextContent {
  max-width: 800px;
  padding-left: 10px;
  padding-right: 20px;
  padding-top: 20px;
  margin-right: 50px;
  padding-bottom: 20px;
}
@media (max-width: 991px) {
  .codexTextContent {
    width: 100%;
    max-width: none;
    padding-left: 20px;
    padding-right: 20px;
    margin-right: 0px;
    border-top: 1px solid #2d2d2d;
    margin-top: -3px;
    padding-top: 20px;
    padding-bottom: 20px;
  }
}




.codexTextContent h1 {
  margin-bottom: 2px;
  //text-transform: uppercase;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  position: relative;
  font-size: 3rem;
  letter-spacing: -0.1rem;
}
.codexTextContent h1::after {
  background: none;
  content: attr(data-text);
  left: 0;
  position: absolute;
  text-shadow: -2px -2px 0px #fff;
  top: 0;
  z-index: 2;
  user-select: none;
}
@media (max-width: 991px) {
  .codexTextContent h1 {
    text-align: center;
  }
}
.codexTextContent h2 {
  margin-bottom: 30px;
}
@media (max-width: 991px) {
  .codexTextContent h2 {
    text-align: center;
  }
}
@media (max-width: 991px) {
  .codexTextProcess {
    text-align: center;
  }
}


.codexImageBlock {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  margin-right: 40px;
}
@media screen and (max-width: 1600px) {
  .codexImageBlock {
    padding: 40px;
    border-top: 1px solid rgba(255,255,255,0.2);
    margin-right: 0;
  }
  .codexImage img {
    width: 100%;
  }
}

.codexImageContent {
  display: flex;
  padding-top: 30px;
}
.codexLeftBar {
  border-left: 2px solid;
  border-top: 2px solid;
  border-bottom: 2px solid;
  width: 20px;
  margin-right: 10px;
}
.codexRightBar {
  border-right: 2px solid;
  border-top: 2px solid;
  border-bottom: 2px solid;
  width: 20px;
  margin-left: 10px;
}

.codexScrollText {
  text-align: center;
  padding-top: 10px;
}


.wikiHead {
  display: flex;
  flex-direction: row;
  padding-top: 30px;
  padding-bottom: 30px;
}
.wikiLeft {
  flex-grow: 1;
}
.wikiTOC {
  margin: 20px;
  /* border-right: 1px solid rgba(255,255,255,0.2); */
  text-align: left;
  white-space: nowrap;
}
@media (max-width: 991px) {
  .wikiTOC {
    text-align: center;
    border-right: none;
  }
}
.wikiTOC ul {
  margin: 10px;
  margin-left: 30px;
  list-style: none;
  padding-left: 10px;
  padding-top: 20px;
}
@media (max-width: 991px) {
  .wikiTOC ul {
    padding-top: 0px;
  }
}
.wikiTOCLink {
  border-left: 2px solid;
  padding-left: 30px;
  text-transform: uppercase;
  transition: 0.1s ease-in-out;
}
@media (max-width: 991px) {
  .wikiTOCLink {
    border-right: none;
    padding-right: 0px;
  }
}


.parallaxBlock {
  width: 100%;
  min-height: auto;
  height: 100%;
  background-color: #151515;

  text-align: center;
  color: white;
  
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: 50% 50%;

  background-size: cover;

  border-bottom: 1px solid #2d2d2d;
  border-top: 1px solid #2d2d2d;
  box-shadow: inset 0 -100px 100px -100px #000000, inset 0 100px 100px -100px #000000;
}
.parallaxBlockChild {
  height: 100%;
  width: 100%;

  display: flex;
  flex-direction: column;
  justify-content: center;

  background-position: 50% 50%;
  background-size: 100% auto;
  background-repeat: no-repeat;
}

/*    STAT BLOCK     */

.statBlock {
  padding-left: 0px;
  padding-right: 0px;
}
/* ... */

